--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,10 +121,13 @@
   <data name="window-close" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window-close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="window-minimize" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\window-minimize.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="movie-roll" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\movie-roll.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="window-minimize" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\window-minimize.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="home-circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\home-circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
