--- a/Views/AnimesView.resx
+++ b/Views/AnimesView.resx
@@ -120,4 +120,64 @@
   <metadata name="imageListAnime.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="imageListAnime.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAaAwAAAJNU0Z0AUkBTAIBAQYB
+        AAEIAQABCAEAASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMAAUADAAEBAQABIAYAAYD/
+        AP8A/wD/AP8A/wD/AP8ArgBY/wM4AUD/AKEAA7YBv1z//wChACz/A5QBnwN1AYADtgG/KP//AKEAJP8D
+        dQGAFAAk//8AMQAM/zAAA9kB3zAAIP8D2QHfGAADGwEgIP//ADEADP8oAAMbASAI/zAAIP8DOAFAHAAg
+        //8AMQAM/yQAA3UBgAz/MAAg/yAAIP//ADEADP8cAAMbASAU/zAAIP8DVgFgHAAg//8AMQAM/xgAA3UB
+        gBj/MAAk/xgAA1YBYCD//wAxAAz/FAAg/zAAJP8D2QHfEAADGwEgJP//ADEADP8MAAMbASAk/zAALP8D
+        2QHfA7YBvyz//wAxAAz/CAAD2QHfKP8wAGD//wAxAAz/DAAo/zAAYP//ADEADP8QAAO2Ab8g/zAAYP//
+        ADEADP8UAAMbASAc/zAAYP//ADEADP8cAAPZAd8U/zAAYP//ADEADP8gAAM4AUAQ/zAADP80ACD//wAx
+        AAz/KAAM/zAADP80ACD//wAxAAz/LAADdQGABP8wAAz/NAAg//8AMQAM/zAAAxsBIDAADP80ABz//wCl
+        AAz/NAAY//8AqQAD2QHfUP//AK0AAxsBIEz//wC1AAMbASADtgG/QP//AP8A/wD/AP8A/wD/AP8A/wD/
+        AP8A0wADdQGAQP8D2QHfVAAM/wNWAWD/AFEAAzgBQEz/LAADVgFgA5QBnwOUAZ8DlAGfA5QBnwOUAZ8D
+        VgFgCAAQ/wNWAWD/AE0AA9kB30z/KAAc/wOUAZ8IABT/A1YBYP8ASQAM/zgAA1YBYAj/JAADGwEgHP8D
+        lAGfDAAU/wNWAWDkAAO2Ab9cAAz/OAADVgFgCP8kAANWAWAg/xAAFP8DVgFg3AAI/wO2Ab9YAAz/OAAD
+        VgFgCP8kAANWAWAk/xAAFP8DVgFg1AAM/wPZAd9YAAz/OAADVgFgCP8kAANWAWAo/xAAFP8DVgFgzAAM
+        /wPZAd9cAAz/OAADVgFgCP8kAANWAWAs/xAAFP8DVgFgNAAE/wM4AUAsAANWAWAI/1AADP8D2QHfTAAI
+        /wOUAZ8IAAz/OAADVgFgCP8kAANWAWAw/xAAEP8D2QHfNAAI/wPZAd8oAANWAWAI/0wADP8D2QHfUAAI
+        /wOUAZ8IAAz/OAADVgFgCP8kAANWAWA0/xAACP8D2QHfBAADdQGAA1YBYCwAEP8kAANWAWAI/0gADP8D
+        2QHfVAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWA4/xAAA9kB3wQAA3UBgAj/AzgBQCgAFP8DdQGAHAAD
+        VgFgCP9EAAz/A9kB31gACP8DlAGfCAAM/zgAA1YBYAj/JAADVgFgPP8QAAN1AYAM/ywAHP8YAANWAWAI
+        /0AADP8D2QHfXAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWBA/xAACP8DGwEgLAAg/wM4AUAQAANWAWAI
+        /zwAEP8DlAGfA5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QB
+        nwOUAZ8DlAGfIAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWBE/0QAJP8D2QHfDAADVgFgCP84AFT/IAAI
+        /wOUAZ8IAAz/OAADVgFgCP8kAANWAWBI/0AALP8DGwEgBAADVgFgCP84AANWAWBQ/yAACP8DlAGfCAAM
+        /zgAA1YBYAj/JAADVgFgTP88ACj/A3UBgAgAA1YBYAj/PAADVgFgDP8DOAFAXAAI/wOUAZ8IAAz/OAAD
+        VgFgCP8kAANWAWBQ/zgAJP8QAANWAWAI/0AAA1YBYAz/AzgBQFgACP8DlAGfCAAM/zgAA1YBYAj/JAAD
+        VgFgVP80ABz/A9kB3xQAA1YBYAj/RAADVgFgDP8DOAFAVAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWBU
+        /zQAGP8DGwEgGAADVgFgCP9IAANWAWAM/wM4AUBQAAj/A5QBnwgADP84AANWAWAI/yQAA1YBYCz/A5QB
+        nxgADP80ABD/A9kB3yAAA1YBYAj/TAADVgFgDP8DOAFATAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWAs
+        /wOUAZ8UAAz/A3UBgDQADP8DdQGAJAADVgFgCP9QAANWAWAM/wM4AUBIAAj/A5QBnwgADP8DlAGfA5QB
+        nwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwO2Ab8I/yQAA1YB
+        YCz/A5QBnxAADP8DdQGAOAAE/wPZAd8sAANWAWAI/1QAA1YBYAz/AzgBQEQACP8DlAGfCAADdQGATP8k
+        AANWAWAs/wOUAZ8MAAz/A3UBgDwAA3UBgDAAA1YBYAj/WAADVgFgDP9EAAj/A5QBnwwAA7YBv0T/AxsB
+        ICQAA1YBYCz/A5QBnwgADP8DdQGA3AADVgFgBP9IAAj/A5QBn3wAA1YBYCz/A5QBnwQADP8DdQGA/wAx
+        AAj/A5QBn3wAA1YBYCz/A5QBnwz/A3UBgP8ANQAI/wOUAZ+AADj/A3UBgP8AOQBI/wOUAZ9AAAM4AUAw
+        /wN1AYD/AD0AAzgBQET/A5QBn/8AvQADOAFAA1YBYANWAWADVgFgA1YBYANWAWADVgFgA1YBYANWAWAD
+        VgFgA1YBYANWAWADVgFgA1YBYANWAWADVgFgAzgBQP8A/wD/ACsAAUIBTQE+BwABPgMAASgDAAGAAwAB
+        QAMAAQEBAAEBBgABBBYAA/8BAAj/CAAI/wgACP8IAAj/CAAE/wH4AgABDwgABP8B8AIAAQ8IAAT/AfAC
+        AAEPCAAE/wHwAQMB4AEPCAAB/wEfAf4B/wHwAQcB4AEPCAAB/wEfAfgB/wHwAQcB8AEPCAAB/wEfAfAB
+        /wHwAQ8B8AEPCAAB/wEfAcAB/wHwAQcB8AEPCAAB/wEfAYAB/wHwAQcB4AEPCAAB/wEfAQAB/wHwAQMB
+        wAEPCAAB/wEcAQAB/wHwAgABDwgAAf8BGAEAAf8B8AIAAQ8IAAH/ARwBAAH/AfACAAEPCAAB/wEeAQAB
+        /wHwAgABDwgAAf8BHwEAAf8B8AIAAQ8IAAH/AR8BwAH/AfACAAEPCAAB/wEfAeAB/wHxAf8B8AEPCAAB
+        /wEfAfgB/wHxAf8B8AEPCAAB/wEfAfwB/wHxAf8B8AEPCAAB/wEfAf4B/wHxAf8B8AEfCAAE/wHxAf8B
+        8AE/CAAE/wHwAgABfwgABP8B8AIAAf8IAAT/AfgBAAEBAf8IAAj/CAAI/wgACP8IAAj/CAAV/wGAAQAB
+        HwL/AQ8K/wIAAQ8B/gEDAQcK/wIAAQ8B/AIDCv8BHwH/AY8B+AEDAYEH/wF/Av8BHwH/AY8B+AEDAcAG
+        /wH+AT8C/wEfAf8BjwH4AQEB4AF/Bf8B/AE/Av8BHwH/AY8B+AEAAfABPwX/AfgBfwL/AR8B/wGPAfgB
+        AAF4AR8B/wE/AfgC/wHwAv8B4wEfAf8BjwH4AQABPAEfAf8BHwH4Av8B4QL/AeMBHwH/AY8B+AEAAR4B
+        JwH/AQ8B+AL/AcMC/wHjAR8B/wGPAfgBAAEPAUMB/wEDAfgC/wGHAv8B4wEfAf8BjwH4AQABBwGHAf8B
+        AQH4Av8BDwL/AeMBHwH/AY8B+AEAAQMBxwH/AQABeAH/Af4CAAEfAeMBHwH/AY8B+AEAAQEC/wEAATgB
+        /wH8AgABHwHjAR8B/wGPAfgCAAL/AQABCAH/AfwCAAEfAeMBHwH/AY8B+AIAAX8B/wEAARgB/wH+AQ8C
+        /wHjAR8B/wGPAfgCAAE/Af8BAAF4Av8BBwL/AeMBHwH/AY8B+AIAAR8B/wEAAfgC/wGDAv8B4wEfAf8B
+        jwH4AgABHwH/AQEB+AL/AcEC/wHjAR8B/wGPAfgBAAE/AR8B/wEHAfgC/wHgAv8B4wEfAf8BjwH4AQAB
+        PgEfAf8BDwH4Av8B8AF/Af8B4wIAAQ8B+AEAATwBPwH/AT8B+AL/AfgBPwH/AeMCAAEPAfgBAAE4AX8B
+        /wF/AfgC/wH8AT8B/wHjAYABAAEPAfgBAAEwBv8B/gF/Af8B4wP/AfgBAAEhCf8B4wP/AfgBAAEDCf8B
+        4wP/AfwBAAEHCf8B4AEAAQMB/wH8AQABDwn/AeABAAEDDf8B+AEAAQMZ/ws=
+</value>
+  </data>
 </root>
