SeriesView.Designer.cs SeriesView.resx

--- a/Views/FilmesView.resx
+++ b/Views/FilmesView.resx
@@ -120,6 +120,66 @@
   <metadata name="ListImage.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="ListImage.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAcgwAAAJNU0Z0AUkBTAIBAQYB
+        AAEIAQABCAEAASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMAAUADAAEBAQABIAYAAYD/
+        AP8A/wD/AP8A/wD/AP8A/wD/ANwAA7YBv/8A+QAI/wO2Ab//APEADP8D2QHf/wBZAAz/MAAD2QHfVAAM
+        /wPZAd//AF0ADP8oAAMbASAI/1AADP8D2QHf/wBhAAz/JAADdQGADP9MAAz/A9kB3/8AZQAM/xwAAxsB
+        IBT/SAAM/wPZAd//AGkADP8YAAN1AYAY/0QADP8D2QHf/wBtAAz/FAAg/0AADP8D2QHf/wBxAAz/DAAD
+        GwEgJP88ABD/A5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QB
+        nwOUAZ8DlAGfA5QBn/8ANQAM/wgAA9kB3yj/OABU//8ANQAM/wwAKP84AANWAWBQ//8ANQAM/xAAA7YB
+        vyD/PAADVgFgDP8DOAFA/wBxAAz/FAADGwEgHP9AAANWAWAM/wM4AUD/AG0ADP8cAAPZAd8U/0QAA1YB
+        YAz/AzgBQP8AaQAM/yAAAzgBQBD/SAADVgFgDP8DOAFA/wBlAAz/KAAM/0wAA1YBYAz/AzgBQP8AYQAM
+        /ywAA3UBgAT/UAADVgFgDP8DOAFA/wBdAAz/MAADGwEgVAADVgFgDP8DOAFA/wDxAANWAWAM//8A9QAD
+        VgFgBP//AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wDvAAN1AYBA/wPZAd9UAAz/A1YBYP8AUQAD
+        OAFATP8sAANWAWADlAGfA5QBnwOUAZ8DlAGfA5QBnwNWAWAIABD/A1YBYP8ATQAD2QHfTP8oABz/A5QB
+        nwgAFP8DVgFgvABY/wM4AUAwAAz/OAADVgFgCP8kAAMbASAc/wOUAZ8MABT/A1YBYLQAA7YBv1z/MAAM
+        /zgAA1YBYAj/JAADVgFgIP8QABT/A1YBYLAALP8DlAGfA3UBgAO2Ab8o/zAADP84AANWAWAI/yQAA1YB
+        YCT/EAAU/wNWAWCsACT/A3UBgBQAJP8wAAz/OAADVgFgCP8kAANWAWAo/xAAFP8DVgFgqAAg/wPZAd8Y
+        AAMbASAg/zAADP84AANWAWAI/yQAA1YBYCz/EAAU/wNWAWA0AAT/AzgBQCwAA1YBYAj/MAAg/wM4AUAc
+        ACD/HAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWAw/xAAEP8D2QHfNAAI/wPZAd8oAANWAWAI/zAAIP8g
+        ACD/HAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWA0/xAACP8D2QHfBAADdQGAA1YBYCwAEP8kAANWAWAI
+        /zAAIP8DVgFgHAAg/xwACP8DlAGfCAAM/zgAA1YBYAj/JAADVgFgOP8QAAPZAd8EAAN1AYAI/wM4AUAo
+        ABT/A3UBgBwAA1YBYAj/MAAk/xgAA1YBYCD/HAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWA8/xAAA3UB
+        gAz/LAAc/xgAA1YBYAj/MAAk/wPZAd8QAAMbASAk/xwACP8DlAGfCAAM/zgAA1YBYAj/JAADVgFgQP8Q
+        AAj/AxsBICwAIP8DOAFAEAADVgFgCP8wACz/A9kB3wO2Ab8s/xwACP8DlAGfCAAM/zgAA1YBYAj/JAAD
+        VgFgRP9EACT/A9kB3wwAA1YBYAj/MABg/xwACP8DlAGfCAAM/zgAA1YBYAj/JAADVgFgSP9AACz/AxsB
+        IAQAA1YBYAj/MABg/xwACP8DlAGfCAAM/zgAA1YBYAj/JAADVgFgTP88ACj/A3UBgAgAA1YBYAj/MABg
+        /xwACP8DlAGfCAAM/zgAA1YBYAj/JAADVgFgUP84ACT/EAADVgFgCP8wAGD/HAAI/wOUAZ8IAAz/OAAD
+        VgFgCP8kAANWAWBU/zQAHP8D2QHfFAADVgFgCP8wAGD/HAAI/wOUAZ8IAAz/OAADVgFgCP8kAANWAWBU
+        /zQAGP8DGwEgGAADVgFgCP8wAAz/NAAg/xwACP8DlAGfCAAM/zgAA1YBYAj/JAADVgFgLP8DlAGfGAAM
+        /zQAEP8D2QHfIAADVgFgCP8wAAz/NAAg/xwACP8DlAGfCAAM/zgAA1YBYAj/JAADVgFgLP8DlAGfFAAM
+        /wN1AYA0AAz/A3UBgCQAA1YBYAj/MAAM/zQAIP8cAAj/A5QBnwgADP8DlAGfA5QBnwOUAZ8DlAGfA5QB
+        nwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwOUAZ8DlAGfA5QBnwO2Ab8I/yQAA1YBYCz/A5QBnxAADP8D
+        dQGAOAAE/wPZAd8sAANWAWAI/zAADP80ABz/IAAI/wOUAZ8IAAN1AYBM/yQAA1YBYCz/A5QBnwwADP8D
+        dQGAPAADdQGAMAADVgFgCP8wAAz/NAAY/yQACP8DlAGfDAADtgG/RP8DGwEgJAADVgFgLP8DlAGfCAAM
+        /wN1AYCwAAPZAd9Q/ygACP8DlAGffAADVgFgLP8DlAGfBAAM/wN1AYC0AAMbASBM/ywACP8DlAGffAAD
+        VgFgLP8DlAGfDP8DdQGAvAADGwEgA7YBv0D/MAAI/wOUAZ+AADj/A3UBgP8AOQBI/wOUAZ9AAAM4AUAw
+        /wN1AYD/AD0AAzgBQET/A5QBn/8AvQADOAFAA1YBYANWAWADVgFgA1YBYANWAWADVgFgA1YBYANWAWAD
+        VgFgA1YBYANWAWADVgFgA1YBYANWAWADVgFgAzgBQP8A/wD/ACsAAUIBTQE+BwABPgMAASgDAAGAAwAB
+        QAMAAQEBAAEBBgABBBYAA/8BAAj/CAAI/wgACP8IAAj/CAAI/wgABv8BfwH/CAAF/wH+AT8B/wgABf8B
+        /AE/Af8IAAH/AR8B/gL/AfgBfwH/CAAB/wEfAfgC/wHwAv8IAAH/AR8B8AL/AeEC/wgAAf8BHwHAAv8B
+        wwL/CAAB/wEfAYAC/wGHAv8IAAH/AR8BAAL/AQ8C/wgAAf8BHAEAAf8B/gIAAR8IAAH/ARgBAAH/AfwC
+        AAEfCAAB/wEcAQAB/wH8AgABHwgAAf8BHgEAAf8B/gEPAv8IAAH/AR8BAAL/AQcC/wgAAf8BHwHAAv8B
+        gwL/CAAB/wEfAeAC/wHBAv8IAAH/AR8B+AL/AeAC/wgAAf8BHwH8Av8B8AF/Af8IAAH/AR8B/gL/AfgB
+        PwH/CAAF/wH8AT8B/wgABf8B/gF/Af8IAAj/CAAI/wgACP8IAAj/CAAI/wgACP8IABX/AYABAAEfAv8B
+        Dwr/AgABDwH+AQMBBwr/AgABDwH8AgMF/wH4AgABDwH/AR8B/wGPAfgBAwGBBf8B8AIAAQ8B/wEfAf8B
+        jwH4AQMBwAX/AfACAAEPAf8BHwH/AY8B+AEBAeABfwT/AfABAwHgAQ8B/wEfAf8BjwH4AQAB8AE/BP8B
+        8AEHAeABDwH/AR8B/wGPAfgBAAF4AR8B/wE/AfgB/wHwAQcB8AEPAeMBHwH/AY8B+AEAATwBHwH/AR8B
+        +AH/AfABDwHwAQ8B4wEfAf8BjwH4AQABHgEnAf8BDwH4Af8B8AEHAfABDwHjAR8B/wGPAfgBAAEPAUMB
+        /wEDAfgB/wHwAQcB4AEPAeMBHwH/AY8B+AEAAQcBhwH/AQEB+AH/AfABAwHAAQ8B4wEfAf8BjwH4AQAB
+        AwHHAf8BAAF4Af8B8AIAAQ8B4wEfAf8BjwH4AQABAQL/AQABOAH/AfACAAEPAeMBHwH/AY8B+AIAAv8B
+        AAEIAf8B8AIAAQ8B4wEfAf8BjwH4AgABfwH/AQABGAH/AfACAAEPAeMBHwH/AY8B+AIAAT8B/wEAAXgB
+        /wHwAgABDwHjAR8B/wGPAfgCAAEfAf8BAAH4Af8B8AIAAQ8B4wEfAf8BjwH4AgABHwH/AQEB+AH/AfEB
+        /wHwAQ8B4wEfAf8BjwH4AQABPwEfAf8BBwH4Af8B8QH/AfABDwHjAR8B/wGPAfgBAAE+AR8B/wEPAfgB
+        /wHxAf8B8AEPAeMCAAEPAfgBAAE8AT8B/wE/AfgB/wHxAf8B8AEfAeMCAAEPAfgBAAE4AX8B/wF/AfgB
+        /wHxAf8B8AE/AeMBgAEAAQ8B+AEAATAF/wHwAgABfwHjA/8B+AEAASEF/wHwAgAB/wHjA/8B+AEAAQMF
+        /wH4AQABAQH/AeMD/wH8AQABBwn/AeABAAEDAf8B/AEAAQ8J/wHgAQABAw3/AfgBAAEDGf8L
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
